Checked import statements during resolution of qName of argumentTypes